@@ -1,3 +1,13 @@
+2009-12-21  Torbjorn Granlund  <tege@gmplib.org>
+
+	* configure.in: Add --enable-old-fft-full.
+	* tune/speed.c (routine): Conditionalise mpn_mul_fft_full references on
+	WANT_OLD_FFT_FULL.
+	* tune/common.c (speed_mpn_mul_fft_full)
+	(speed_mpn_mul_fft_full_sqr): Likewise.
+	* mpn/generic/mul_fft.c (mpn_mul_fft_full): Include iff
+	WANT_OLD_FFT_FULL.
+
 2009-12-21  Marco Bodrato <bodrato@mail.dm.unipi.it>
 
 	* tests/mpn/t-mulmod_bnm1.c (ref_mulmod_bnm1): Use ref_mul.
